fix: Add favorites
